Adicionando uma fonte e trocando as cores

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="UTF-8"></meta>
 	<title>Derivative calculator</title>
-  <script type="text/javascript" src="derivative_script.js"></script>
+  	<script type="text/javascript" src="derivative_script.js"></script>
+	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
-<body bgcolor=#C1FFC1>
+<body bgcolor=#000000>
 	<center>
 		<h2>Derivative calculator</h2>
 		<p>Formula</p>
@@ -26,8 +27,8 @@
 				}
 		}
 		</script>
-	  <p id="result">..........</p>
-	  <p id="errorLog"></p>
+	  	<p id="result" style="font-size:30px">..........</p>
+	  	<p id="errorLog" style="font-size:30px"></p>
 		<p>-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-</p>
 		<h2>How to use</h2>
 		<table>
