--- a/apps.html
+++ b/apps.html
@@ -1,25 +1,19 @@
 <!DOCTYPE = html>
-<!--Some sites:
-http://ronenness.github.io/RPGUI/#main  //  https://github.com/RonenNess/RPGUI
-https://lipis.github.io/bootstrap-social/  //  https://codepen.io/Deadlymuffin/pen/hGiqo/
-https://milligram.github.io/  //  https://github.com/milligram/milligram
-http://materializecss.com/buttons.html
--->
 <html>
 <head>
 	<meta charset="UTF-8"></meta>
-	<title>Home Page</title>
+	<title>About me</title>
 	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
 	<header>
 		<div id="image"></div>
 		<ul class="navbar">
-			<li class="active">
-				<a>Home</a>
-			</li>
 			<li>
-				<a href="apps.html">Web APPs</a>
+				<a href="index.html">Home</a>
+			</li>
+			<li class="active">
+				<a>Web APPs</a>
 				<ul>
 					<li><a href="derivative.html">Derivative calculator</a></li>
 			    </ul>
@@ -37,28 +31,31 @@ http://materializecss.com/buttons.html
 			</li>
 		</ul>
 	</header>
-	<div class="content">
-		<center>
-			<p>&nbsp;</p>
-			<h2>Welcome to my personal site!!!</h2>
-			<img src="tesseract.gif">
-			<p>&nbsp;</p>
+    <div class="content">
+		<p>&nbsp;</p>
+        <center>
+            <h2>APPs</h2>
+            <p>Here you can use some APPs I developed for the web using Javascript</p>
 		</center>
-	</div>
-	<footer id="footer">
-		<table class="footer">
-			<tbody>
-				<tr>
-					<td>
-						<ul class="footer">
-							<li><a href="https://github.com/IceMage144"><img src="github.png"></a></li>
+        <ul>
+            <li><a href="derivative.html">Derivative Calculator</a>: An APP that calculates the derivative of a function</li>
+        </ul>
+		<p>&nbsp;</p>
+    </div>
+    <footer id="footer">
+        <table class="footer">
+            <tbody>
+                <tr>
+                    <td>
+                        <ul class="footer">
+                            <li><a href="https://github.com/IceMage144"><img src="github.png"></a></li>
 							<li><a href="https://www.facebook.com/joao.gabriel.564813"><img src="facebook.png"></a></li>
 							<li><a href="mailto:joao.basi@usp.br"><img src="mail.png"></a></li>
-						</ul>
-					</td>
-				</tr>
-			</table>
-		</table>
-	</footer>
+                        </ul>
+                    </td>
+                </tr>
+            </table>
+        </table>
+    </footer>
 </body>
 </html>
