--- a/apps.html
+++ b/apps.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8"></meta>
-	<title>About me</title>
+	<title>APPs</title>
 	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
