--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ http://materializecss.com/buttons.html
 				<a href="apps.html">Web APPs</a>
 				<ul>
 					<li><a href="derivative.html">Derivative calculator</a></li>
+					<li><a href="snake.html">Snake</a></li>
 			    </ul>
 			</li>
 			<li>
@@ -41,7 +42,7 @@ http://materializecss.com/buttons.html
 		<center>
 			<p>&nbsp;</p>
 			<h2>Welcome to my personal site!!!</h2>
-			<img src="tesseract.gif">
+			<img id="tesseract" src="assets/tesseract.gif">
 			<p>&nbsp;</p>
 		</center>
 	</div>
@@ -51,9 +52,9 @@ http://materializecss.com/buttons.html
 				<tr>
 					<td>
 						<ul class="footer">
-							<li><a href="https://github.com/IceMage144"><img src="github.png"></a></li>
-							<li><a href="https://www.facebook.com/joao.gabriel.564813"><img src="facebook.png"></a></li>
-							<li><a href="mailto:joao.basi@usp.br"><img src="mail.png"></a></li>
+							<li><a href="https://github.com/IceMage144"><img src="assets/github.png"></a></li>
+							<li><a href="https://www.facebook.com/joao.gabriel.564813"><img src="assets/facebook.png"></a></li>
+							<li><a href="mailto:joao.basi@usp.br"><img src="assets/mail.png"></a></li>
 						</ul>
 					</td>
 				</tr>
