--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,7 @@
 				<a href="apps.html">Web APPs</a>
 				<ul>
 					<li><a href="derivative.html">Derivative calculator</a></li>
+					<li><a href="snake.html">Snake</a></li>
 			    </ul>
 			</li>
 			<li class="active">
@@ -45,8 +46,10 @@
 					<li>Mandelbrot set generator: Generates an image of the famous Mandelbrot set</li>
 					<li>Bouncing balls: Simulates some bouncing balls and a black hole</li>
 					<li>Random fractals: Generates Barnsley's fern and Sierpinski's triangle with moving dots</li>
-					<li>Conjectore: A Collatz conjecture analizer and "solver"</li>
+					<li>Conjecture: A Collatz conjecture analizer and "solver"</li>
 					<li>Markov: A random text generator using Markov chain</li>
+					<li>Neural :): My attempt to make a neural network before knowing how to make one</li>
+					<li>Times table: A times table drawer and animator</li>
 				</ul>
 			</li>
 			<li>
@@ -64,7 +67,7 @@
 				game developers from USP, and I'm doing some projects with them:
 				<ul>
 					<li><a href="https://github.com/IceMage144/SpaceInvaders">Space invaders</a>: A reproduction of the famous game Space Invaders</li>
-					<li><a href="https://github.com/IceMage144/xablau">"Xablau"</a>(name not defined yet): A thriller adventure game set on a dystopic future</li>
+					<li><a href="https://github.com/IceMage144/xablau">Deviant</a>: A thriller adventure game set on a dystopic future</li>
 				</ul>
 			</li>
         </ul>
@@ -76,9 +79,9 @@
                 <tr>
                     <td>
                         <ul class="footer">
-                            <li><a href="https://github.com/IceMage144"><img src="github.png"></a></li>
-							<li><a href="https://www.facebook.com/joao.gabriel.564813"><img src="facebook.png"></a></li>
-							<li><a href="mailto:joao.basi@usp.br"><img src="mail.png"></a></li>
+                            <li><a href="https://github.com/IceMage144"><img src="assets/github.png"></a></li>
+							<li><a href="https://www.facebook.com/joao.gabriel.564813"><img src="assets/facebook.png"></a></li>
+							<li><a href="mailto:joao.basi@usp.br"><img src="assets/mail.png"></a></li>
                         </ul>
                     </td>
                 </tr>
