--- a/snake.html
+++ b/snake.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8"></meta>
-	<title>APPs</title>
+	<title>Home Page</title>
 	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
@@ -16,7 +16,7 @@
 				<a>Web APPs</a>
 				<ul>
 					<li><a href="derivative.html">Derivative calculator</a></li>
-					<li><a href="snake.html">Snake</a></li>
+                    <li><a href="snake.html">Snake</a></li>
 			    </ul>
 			</li>
 			<li>
@@ -32,32 +32,30 @@
 			</li>
 		</ul>
 	</header>
-    <div class="content">
-		<p>&nbsp;</p>
-        <center>
-            <h2>APPs</h2>
-            <p>Here you can use some APPs I developed for the web using Javascript</p>
+	<div class="content">
+		<center>
+			<p>&nbsp;</p>
+			<div id="gamediv">
+	            <canvas id="game"></canvas>
+	            <script type="text/javascript" src="snake_script.js"></script>
+			</div>
+			<p>&nbsp;</p>
 		</center>
-        <ul>
-            <li><a href="derivative.html">Derivative Calculator</a>: An APP that calculates the derivative of a function</li>
-			<li><a href="snake.html">Snake</a>: A remake of the classic game "Snake"</li>
-		</ul>
-		<p>&nbsp;</p>
-    </div>
-    <footer id="footer">
-        <table class="footer">
-            <tbody>
-                <tr>
-                    <td>
-                        <ul class="footer">
-                            <li><a href="https://github.com/IceMage144"><img src="assets/github.png"></a></li>
+	</div>
+	<footer id="footer">
+		<table class="footer">
+			<tbody>
+				<tr>
+					<td>
+						<ul class="footer">
+							<li><a href="https://github.com/IceMage144"><img src="assets/github.png"></a></li>
 							<li><a href="https://www.facebook.com/joao.gabriel.564813"><img src="assets/facebook.png"></a></li>
 							<li><a href="mailto:joao.basi@usp.br"><img src="assets/mail.png"></a></li>
-                        </ul>
-                    </td>
-                </tr>
-            </table>
-        </table>
-    </footer>
+						</ul>
+					</td>
+				</tr>
+			</table>
+		</table>
+	</footer>
 </body>
 </html>
