--- a/tetris.html
+++ b/tetris.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8"></meta>
-	<title>Snake</title>
-	<link rel="stylesheet" type="text/css" href="style.css" />
+	<title>Tetris</title>
+	<link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
 	<header>
@@ -17,6 +17,7 @@
 				<ul>
 					<li><a href="derivative.html">Derivative calculator</a></li>
                     <li><a href="snake.html">Snake</a></li>
+                    <li><a href="tetris.html">Tetris</a></li>
 			    </ul>
 			</li>
 			<li>
@@ -37,7 +38,7 @@
 			<p>&nbsp;</p>
 			<div id="gamediv">
 	            <canvas id="game"></canvas>
-	            <script type="text/javascript" src="snake_script.js"></script>
+	            <script type="text/javascript" src="tetris_script.js"></script>
 			</div>
 			<p>&nbsp;</p>
 		</center>
