Add pause button, instructions and finish tetris mechanic

--- a/derivative.html
+++ b/derivative.html
@@ -21,6 +21,7 @@
 				<ul>
 					<li><a href="derivative.html">Derivative calculator</a></li>
 					<li><a href="snake.html">Snake</a></li>
+					<li><a href="tetris.html">Tetris</a></li>
 			    </ul>
 			</li>
 			<li>
