--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ http://materializecss.com/buttons.html
 				<ul>
 					<li><a href="derivative.html">Derivative calculator</a></li>
 					<li><a href="snake.html">Snake</a></li>
+					<li><a href="tetris.html">Tetris</a></li>
 			    </ul>
 			</li>
 			<li>
