--- a/snake.html
+++ b/snake.html
@@ -17,6 +17,7 @@
 				<ul>
 					<li><a href="derivative.html">Derivative calculator</a></li>
                     <li><a href="snake.html">Snake</a></li>
+					<li><a href="tetris.html">Tetris</a></li>
 			    </ul>
 			</li>
 			<li>
@@ -36,9 +37,27 @@
 		<center>
 			<p>&nbsp;</p>
 			<div id="gamediv">
+				<!--<input type="submit" value="+" onclick="Game.resize(1)"/>
+				<input type="submit" value="-" onclick="Game.resize(-1)"/>-->
 	            <canvas id="game"></canvas>
 	            <script type="text/javascript" src="snake_script.js"></script>
 			</div>
+			<p>&nbsp;</p>
+			<p>-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-</p>
+			<h2>How to play</h2>
+			<table>
+				<tbody>
+					<tr>
+						<td>
+							<ul>
+								<li>Arrow keys: Move the snake</li>
+								<li>P: Pause</li>
+								<li>Eat apples to increase your score!!</li>
+							</ul>
+						</td>
+					</tr>
+				</tbody>
+			</table>
 			<p>&nbsp;</p>
 		</center>
 	</div>
