--- a/snake.html
+++ b/snake.html
@@ -40,6 +40,7 @@
 				<!--<input type="submit" value="+" onclick="Game.resize(1)"/>
 				<input type="submit" value="-" onclick="Game.resize(-1)"/>-->
 	            <canvas id="game"></canvas>
+				<script type="text/javascript" src="game_engine.js"></script>
 	            <script type="text/javascript" src="snake_script.js"></script>
 			</div>
 			<p>&nbsp;</p>
