--- a/tetris.html
+++ b/tetris.html
@@ -38,6 +38,7 @@
 			<p>&nbsp;</p>
 			<div id="gamediv">
 	            <canvas id="game"></canvas>
+				<script type="text/javascript" src="game_engine.js"></script>
 	            <script type="text/javascript" src="tetris_script.js"></script>
 			</div>
 			<p>-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-</p>
