--- a/MC.html
+++ b/MC.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8"></meta>
-	<title>Snake</title>
+	<title>Missile Command</title>
 	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
@@ -18,6 +18,7 @@
 					<li><a href="derivative.html">Derivative calculator</a></li>
                     <li><a href="snake.html">Snake</a></li>
 					<li><a href="tetris.html">Tetris</a></li>
+                    <li><a href="MC.html">Missile command</a></li>
 			    </ul>
 			</li>
 			<li>
@@ -39,7 +40,7 @@
 			<div id="gamediv">
 	            <canvas id="game"></canvas>
 				<script type="text/javascript" src="game_engine.js"></script>
-	            <script type="text/javascript" src="snake_script.js"></script>
+	            <script type="text/javascript" src="MC_script.js"></script>
 			</div>
 			<p>&nbsp;</p>
 			<p>-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-</p>
