Finish Missile Command base

--- a/snake.html
+++ b/snake.html
@@ -36,6 +36,8 @@
 	<div class="content">
 		<center>
 			<p>&nbsp;</p>
+			<!--<input type="button" value="+" onclick="resize(1)">
+			<input type="button" value="-" onclick="resize(-1)">-->
 			<div id="gamediv">
 	            <canvas id="game"></canvas>
 				<script type="text/javascript" src="game_engine.js"></script>
