Add levels and score calculation and add missile split mechanic

--- a/MC.html
+++ b/MC.html
@@ -50,9 +50,10 @@
 					<tr>
 						<td>
 							<ul>
-								<li>Arrow keys: Move the snake</li>
+								<li>Arrow keys: Move cursor</li>
+								<li>Z: Shoot</li>
 								<li>P: Pause</li>
-								<li>Eat apples to increase your score!!</li>
+								<li>Destroy enemy's missiles to protect your cities!!</li>
 							</ul>
 						</td>
 					</tr>
