Change enemy missiles to increase speed and not quantity by level and they do not necessarely aim an alive city any more

--- a/apps.html
+++ b/apps.html
@@ -18,6 +18,7 @@
 					<li><a href="derivative.html">Derivative calculator</a></li>
 					<li><a href="snake.html">Snake</a></li>
 					<li><a href="tetris.html">Tetris</a></li>
+					<li><a href="missile_command.html">Missile command</a></li>
 			    </ul>
 			</li>
 			<li>
@@ -42,6 +43,8 @@
         <ul>
             <li><a href="derivative.html">Derivative Calculator</a>: An APP that calculates the derivative of a function</li>
 			<li><a href="snake.html">Snake</a>: A remake of the classic game "Snake"</li>
+			<li><a href="tetris.html">Tetris</a>: A remake of the classic game "Tetris"</li>
+			<li><a href="missile_command.html">Missile Command</a>: A remake of the classic game "Missile Command"</li>
 		</ul>
 		<p>&nbsp;</p>
     </div>
