--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ http://materializecss.com/buttons.html
 					<li><a href="derivative.html">Derivative calculator</a></li>
 					<li><a href="snake.html">Snake</a></li>
 					<li><a href="tetris.html">Tetris</a></li>
+					<li><a href="missile_command.html">Missile command</a></li>
 			    </ul>
 			</li>
 			<li>
