--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,7 @@
 					<li><a href="derivative.html">Derivative calculator</a></li>
 					<li><a href="snake.html">Snake</a></li>
 					<li><a href="tetris.html">Tetris</a></li>
+					<li><a href="missile_command.html">Missile command</a></li>
 			    </ul>
 			</li>
 			<li class="active">
