--- a/derivative.html
+++ b/derivative.html
@@ -23,6 +23,7 @@
 					<li><a href="snake.html">Snake</a></li>
 					<li><a href="tetris.html">Tetris</a></li>
 					<li><a href="missile_command.html">Missile command</a></li>
+					<li><a href="maze.html">3D Maze</a></li>
 			    </ul>
 			</li>
 			<li>
