--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ http://materializecss.com/buttons.html
 					<li><a href="snake.html">Snake</a></li>
 					<li><a href="tetris.html">Tetris</a></li>
 					<li><a href="missile_command.html">Missile command</a></li>
+					<li><a href="maze.html">3D Maze</a></li>
 			    </ul>
 			</li>
 			<li>
