Fixes some stuff, adds about.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE = html>
+<!DOCTYPE HTML>
 <!--Some sites:
 http://ronenness.github.io/RPGUI/#main  //  https://github.com/RonenNess/RPGUI
 https://lipis.github.io/bootstrap-social/  //  https://codepen.io/Deadlymuffin/pen/hGiqo/
