--- a/projects.html
+++ b/projects.html
@@ -20,6 +20,7 @@
 					<li><a href="tetris.html">Tetris</a></li>
 					<li><a href="missile_command.html">Missile command</a></li>
 					<li><a href="maze.html">3D Maze</a></li>
+					<li><a href="tower_deffense.html">Tower deffense</a></li>
 			    </ul>
 			</li>
 			<li class="active">
@@ -70,7 +71,8 @@
 				game developers from USP, and I'm doing some projects with them:
 				<ul>
 					<li><a href="https://github.com/IceMage144/SpaceInvaders">Space invaders</a>: A reproduction of the famous game Space Invaders</li>
-					<li><a href="https://github.com/IceMage144/xablau">Deviant</a>: A thriller adventure game set on a dystopic future</li>
+					<li><a href="https://github.com/uspgamedev/Deviant">Deviant</a>: A thriller adventure game set on a dystopic future</li>
+					<li><a href="https://github.com/uspgamedev/ugdk">UGDK (USP Game Development Kit)</a>: A C++ library for making games</li>
 				</ul>
 			</li>
         </ul>
