--- a/tower_deffense.html
+++ b/tower_deffense.html
@@ -20,6 +20,7 @@
 					<li><a href="tetris.html">Tetris</a></li>
                     <li><a href="missile_command.html">Missile command</a></li>
 					<li><a href="maze.html">3D Maze</a></li>
+					<li><a href="tower_deffense.html">Tower deffense</a></li>
 			    </ul>
 			</li>
 			<li>
@@ -51,10 +52,8 @@
 					<tr>
 						<td>
 							<ul>
-								<li>Arrow keys: Move cursor</li>
-								<li>Z: Shoot</li>
-								<li>P: Pause</li>
-								<li>Destroy enemy's missiles to protect your cities!!</li>
+								<li>Mouse: Everything</li>
+								<li>Defeat huge waves of monsters with your military weapons!!</li>
 							</ul>
 						</td>
 					</tr>
