--- a/maze.html
+++ b/maze.html
@@ -20,6 +20,7 @@
 					<li><a href="tetris.html">Tetris</a></li>
 					<li><a href="missile_command.html">Missile command</a></li>
 					<li><a href="maze.html">3D Maze</a></li>
+					<li><a href="tower_deffense.html">Tower deffense</a></li>
 			    </ul>
 			</li>
 			<li>
