Fix a game over bug at game_engine and add title screen for TD

--- a/tower_deffense.html
+++ b/tower_deffense.html
@@ -53,6 +53,8 @@
 						<td>
 							<ul>
 								<li>Mouse: Everything</li>
+								<li>Buy towers from the shop and choose a place to build them in a nice place</li>
+								<li>Click on towers to inspect and upgrade</li>
 								<li>Defeat huge waves of monsters with your military weapons!!</li>
 							</ul>
 						</td>
