Change main font to Magic Pixel

--- a/tower_deffense.html
+++ b/tower_deffense.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8"></meta>
-	<title>Tower Deffense</title>
+	<title>Monster Invasion</title>
 	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
@@ -20,7 +20,7 @@
 					<li><a href="tetris.html">Tetris</a></li>
                     <li><a href="missile_command.html">Missile command</a></li>
 					<li><a href="maze.html">3D Maze</a></li>
-					<li><a href="tower_deffense.html">Tower deffense</a></li>
+					<li><a href="tower_deffense.html">Monster invasion</a></li>
 			    </ul>
 			</li>
 			<li>
@@ -53,7 +53,7 @@
 						<td>
 							<ul>
 								<li>Mouse: Everything</li>
-								<li>Buy towers from the shop and choose a place to build them in a nice place</li>
+								<li>Buy towers from the shop and build them in a nice place</li>
 								<li>Click on towers to inspect and upgrade</li>
 								<li>Defeat huge waves of monsters with your military weapons!!</li>
 							</ul>
