Add white div behind text body

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 					<li><a href="missile_command.html">Missile command</a></li>
 					<li><a href="maze.html">3D Maze</a></li>
 					<li><a href="tower_deffense.html">Monster invasion</a></li>
-			    </ul>
+			  </ul>
 			</li>
 			<li>
 				<a href="projects.html">Projects</a>
@@ -36,12 +36,29 @@
 			</li>
 		</ul>
 	</header>
-  <div class="content">
-		<center>
-			<p>&nbsp;</p>
-			<h2>This page is under construction... Come back later, perhaps?</h2>
-			<p>&nbsp;</p>
-		</center>
+	<div class="paper">
+	  <div class="content">
+			<center>
+				<p>&nbsp;</p>
+				<h2>This page is under construction... Come back later, perhaps?</h2>
+				<p>&nbsp;</p>
+			</center>
+		</div>
 	</div>
+	<footer id="footer">
+		<table class="footer">
+			<tbody>
+				<tr>
+					<td>
+						<ul class="footer">
+							<li><a href="https://github.com/IceMage144"><img src="assets/github.png"></a></li>
+							<li><a href="https://www.facebook.com/joao.gabriel.564813"><img src="assets/facebook.png"></a></li>
+							<li><a href="mailto:joao.basi@usp.br"><img src="assets/mail.png"></a></li>
+						</ul>
+					</td>
+				</tr>
+			</table>
+		</table>
+	</footer>
 </body>
 </html>
