--- a/apps.html
+++ b/apps.html
@@ -36,34 +36,38 @@
 			</li>
 		</ul>
 	</header>
-    <div class="content">
-		<p>&nbsp;</p>
-        <center>
-            <h2>APPs</h2>
-            <p>Here you can use some APPs I developed for the web using Javascript</p>
-		</center>
-        <ul>
-            <li><a href="derivative.html">Derivative Calculator</a>: An APP that calculates the derivative of a function</li>
-			<li><a href="snake.html">Snake</a>: A remake of the classic game "Snake"</li>
-			<li><a href="tetris.html">Tetris</a>: A remake of the classic game "Tetris"</li>
-			<li><a href="missile_command.html">Missile Command</a>: A remake of the classic game "Missile Command"</li>
-		</ul>
-		<p>&nbsp;</p>
-    </div>
-    <footer id="footer">
-        <table class="footer">
-            <tbody>
-                <tr>
-                    <td>
-                        <ul class="footer">
-                            <li><a href="https://github.com/IceMage144"><img src="assets/github.png"></a></li>
+	<div class="paper">
+	  <div class="content">
+			<p>&nbsp;</p>
+	    <center>
+	      <h2>APPs</h2>
+	      <p>Here you can use some APPs I developed using Javascript</p>
+			</center>
+	    <ul>
+	      <li><a href="derivative.html">Derivative Calculator</a>: An APP that calculates the derivative of a function</li>
+				<li><a href="snake.html">Snake</a>: A remake of the classic game "Snake"</li>
+				<li><a href="tetris.html">Tetris</a>: A remake of the classic game "Tetris"</li>
+				<li><a href="missile_command.html">Missile Command</a>: A remake of the classic game "Missile Command"</li>
+				<li><a href="maze.html">3D Maze</a>: A game were the objective is to take a ball to the end of the maze</li>
+				<li><a href="tower_deffense.html">Monster Invasion</a>: A tower deffense game</li>
+			</ul>
+			<p>&nbsp;</p>
+	  </div>
+	</div>
+  <footer id="footer">
+    <table class="footer">
+      <tbody>
+        <tr>
+          <td>
+            <ul class="footer">
+              <li><a href="https://github.com/IceMage144"><img src="assets/github.png"></a></li>
 							<li><a href="https://www.facebook.com/joao.gabriel.564813"><img src="assets/facebook.png"></a></li>
 							<li><a href="mailto:joao.basi@usp.br"><img src="assets/mail.png"></a></li>
-                        </ul>
-                    </td>
-                </tr>
-            </table>
-        </table>
-    </footer>
+            </ul>
+          </td>
+        </tr>
+      </table>
+    </table>
+  </footer>
 </body>
 </html>
