--- a/maze.html
+++ b/maze.html
@@ -16,12 +16,12 @@
 				<a>Web APPs</a>
 				<ul>
 					<li><a href="derivative.html">Derivative calculator</a></li>
-                    <li><a href="snake.html">Snake</a></li>
+          <li><a href="snake.html">Snake</a></li>
 					<li><a href="tetris.html">Tetris</a></li>
 					<li><a href="missile_command.html">Missile command</a></li>
 					<li><a href="maze.html">3D Maze</a></li>
 					<li><a href="tower_deffense.html">Monster invasion</a></li>
-			    </ul>
+			  </ul>
 			</li>
 			<li>
 				<a href="projects.html">Projects</a>
@@ -29,41 +29,43 @@
 					<li><a href="https://github.com/IceMage144/Algorithms">Algorithms</a></li>
 					<li><a href="https://github.com/IceMage144/ScrapyCrawlers">Crawlers</a></li>
 					<li><a href="https://uspgamedev.org/">Gamedev</a></li>
-			    </ul>
+			  </ul>
 			</li>
 			<li>
 				<a href="about.html">About me</a>
 			</li>
 		</ul>
 	</header>
-	<div class="content">
-		<center>
-			<p>&nbsp;</p>
-			<!--<input type="button" value="+" onclick="resize(1)">
-			<input type="button" value="-" onclick="resize(-1)">-->
-			<div id="gamediv">
-	            <!--<canvas id="game"></canvas>-->
-				<script type="text/javascript" src="three.js"></script>
-				<script type="text/javascript" src="game_engine.js"></script>
-	            <script type="text/javascript" src="maze_script.js"></script>
-			</div>
-			<p>&nbsp;</p>
-			<p>-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-</p>
-			<h2>How to play</h2>
-			<table>
-				<tbody>
-					<tr>
-						<td>
-							<ul>
-								<li>Arrow keys: Move the maze</li>
-								<li>Bring the ball to the green spot!!</li>
-							</ul>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-			<p>&nbsp;</p>
-		</center>
+	<div class="paper">
+		<div class="content">
+			<center>
+				<p>&nbsp;</p>
+				<!--<input type="button" value="+" onclick="resize(1)">
+				<input type="button" value="-" onclick="resize(-1)">-->
+				<div id="gamediv">
+		      <!--<canvas id="game"></canvas>-->
+					<script type="text/javascript" src="three.js"></script>
+					<script type="text/javascript" src="game_engine.js"></script>
+		      <script type="text/javascript" src="maze_script.js"></script>
+				</div>
+				<p>&nbsp;</p>
+				<p>-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-</p>
+				<h2>How to play</h2>
+				<table>
+					<tbody>
+						<tr>
+							<td>
+								<ul>
+									<li>Arrow keys: Move the maze</li>
+									<li>Bring the ball to the green spot!!</li>
+								</ul>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+				<p>&nbsp;</p>
+			</center>
+		</div>
 	</div>
 	<footer id="footer">
 		<table class="footer">
