--- a/tower_deffense.html
+++ b/tower_deffense.html
@@ -16,12 +16,12 @@
 				<a>Web APPs</a>
 				<ul>
 					<li><a href="derivative.html">Derivative calculator</a></li>
-                    <li><a href="snake.html">Snake</a></li>
+          <li><a href="snake.html">Snake</a></li>
 					<li><a href="tetris.html">Tetris</a></li>
-                    <li><a href="missile_command.html">Missile command</a></li>
+          <li><a href="missile_command.html">Missile command</a></li>
 					<li><a href="maze.html">3D Maze</a></li>
 					<li><a href="tower_deffense.html">Monster invasion</a></li>
-			    </ul>
+			  </ul>
 			</li>
 			<li>
 				<a href="projects.html">Projects</a>
@@ -29,40 +29,42 @@
 					<li><a href="https://github.com/IceMage144/Algorithms">Algorithms</a></li>
 					<li><a href="https://github.com/IceMage144/ScrapyCrawlers">Crawlers</a></li>
 					<li><a href="https://uspgamedev.org/">Gamedev</a></li>
-			    </ul>
+			  </ul>
 			</li>
 			<li>
 				<a href="about.html">About me</a>
 			</li>
 		</ul>
 	</header>
-	<div class="content">
-		<center>
-			<p>&nbsp;</p>
-			<div id="gamediv">
-	            <canvas id="game"></canvas>
-				<script type="text/javascript" src="game_engine.js"></script>
-	            <script type="text/javascript" src="TD_script.js"></script>
-			</div>
-			<p>&nbsp;</p>
-			<p>-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-</p>
-			<h2>How to play</h2>
-			<table>
-				<tbody>
-					<tr>
-						<td>
-							<ul>
-								<li>Mouse: Everything</li>
-								<li>Buy towers from the shop and build them in a nice place</li>
-								<li>Click on towers to inspect and upgrade</li>
-								<li>Defeat huge waves of monsters with your military weapons!!</li>
-							</ul>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-			<p>&nbsp;</p>
-		</center>
+	<div class="paper">
+		<div class="content">
+			<center>
+				<p>&nbsp;</p>
+				<div id="gamediv">
+		      <canvas id="game"></canvas>
+					<script type="text/javascript" src="game_engine.js"></script>
+		      <script type="text/javascript" src="TD_script.js"></script>
+				</div>
+				<p>&nbsp;</p>
+				<p>-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-</p>
+				<h2>How to play</h2>
+				<table>
+					<tbody>
+						<tr>
+							<td>
+								<ul>
+									<li>Mouse: Everything</li>
+									<li>Buy towers from the shop and build them in a nice place</li>
+									<li>Click on towers to inspect and upgrade</li>
+									<li>Defeat huge waves of monsters with your military weapons!!</li>
+								</ul>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+				<p>&nbsp;</p>
+			</center>
+		</div>
 	</div>
 	<footer id="footer">
 		<table class="footer">
