--- a/index.html
+++ b/index.html
@@ -42,13 +42,15 @@ http://materializecss.com/buttons.html
 			</li>
 		</ul>
 	</header>
-	<div class="content">
-		<center>
-			<p>&nbsp;</p>
-			<h2>Welcome to my personal site!!!</h2>
-			<img id="tesseract" src="assets/tesseract.gif">
-			<p>&nbsp;</p>
-		</center>
+	<div class="paper">
+		<div class="content">
+			<center>
+				<p>&nbsp;</p>
+				<h2>Welcome to my personal site!!!</h2>
+				<img id="tesseract" src="assets/tesseract.gif">
+				<p>&nbsp;</p>
+			</center>
+		</div>
 	</div>
 	<footer id="footer">
 		<table class="footer">
