--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
 					<li><a href="missile_command.html">Missile command</a></li>
 					<li><a href="maze.html">3D Maze</a></li>
 					<li><a href="tower_deffense.html">Monster invasion</a></li>
-			    </ul>
+			  </ul>
 			</li>
 			<li class="active">
 				<a>Projects</a>
@@ -29,69 +29,71 @@
 					<li><a href="https://github.com/IceMage144/Algorithms">Algorithms</a></li>
 					<li><a href="https://github.com/IceMage144/ScrapyCrawlers">Crawlers</a></li>
 					<li><a href="https://uspgamedev.org/">Gamedev</a></li>
-			    </ul>
+			  </ul>
 			</li>
 			<li>
 				<a href="about.html">About me</a>
 			</li>
 		</ul>
 	</header>
-    <div class="content">
-		<p>&nbsp;</p>
-		<center>
-        	<h2>Projects</h2>
-        	<p class="medium">Here are some personal projects I'm working at</p>
-		</center>
-        <ul class="spaced">
-            <li>
-				<a href="https://github.com/IceMage144/Algorithms">Algorithms</a>: A collection of
-				algorithms for diverse purposes, some of them are:
-				<ul>
-					<li>Mandelbrot set generator: Generates an image of the famous Mandelbrot set</li>
-					<li>Bouncing balls: Simulates some bouncing balls and a black hole</li>
-					<li>Random fractals: Generates Barnsley's fern and Sierpinski's triangle with moving dots</li>
-					<li>Conjecture: A Collatz conjecture analizer and "solver"</li>
-					<li>Markov: A random text generator using Markov chain</li>
-					<li>Neural :): My attempt to make a neural network before knowing how to make one</li>
-					<li>Times table: A times table drawer and animator</li>
-				</ul>
-			</li>
-			<li>
-				<a href="https://github.com/IceMage144/ScrapyCrawlers">Crawlers</a>: Some crawlers I
-				made using Python's Scrapy (database not included), some of them are:
-				<ul>
-					<li>Wiki: Takes two Wikipedia's pages and finds a path between them through other
-					pages, much like <a href="http://thewikigame.com/">Wikigame</a></li>
-					<li>Text: Extracts the text from an Wikipedia page</li>
-					<li>Dic: Take some information from <a href="https://www.wiktionary.org/">Wiktionary</a>'s database</li>
-				</ul>
-			</li>
-			<li>
-				<a href="https://https://uspgamedev.org/">GameDev</a>: I'm part of USPGameDev, a group of
-				game developers from USP, and I'm doing some projects with them:
-				<ul>
-					<li><a href="https://github.com/IceMage144/SpaceInvaders">Space invaders</a>: A reproduction of the famous game Space Invaders</li>
-					<li><a href="https://github.com/uspgamedev/Deviant">Deviant</a>: A thriller adventure game set on a dystopic future</li>
-					<li><a href="https://github.com/uspgamedev/ugdk">UGDK (USP Game Development Kit)</a>: A C++ library for making games</li>
-				</ul>
-			</li>
-        </ul>
-		<p>&nbsp;</p>
-    </div>
-    <footer id="footer">
-        <table class="footer">
-            <tbody>
-                <tr>
-                    <td>
-                        <ul class="footer">
-                            <li><a href="https://github.com/IceMage144"><img src="assets/github.png"></a></li>
+	<div class="paper">
+  	<div class="content">
+			<p>&nbsp;</p>
+			<center>
+	      <h2>Projects</h2>
+	      <p class="medium">Here are some personal projects I'm working at</p>
+			</center>
+	    <ul class="spaced">
+	    	<li>
+			  	<a href="https://github.com/IceMage144/Algorithms">Algorithms</a>: A collection of
+					algorithms for diverse purposes, some of them are:
+					<ul>
+						<li>Mandelbrot set generator: Generates an image of the famous Mandelbrot set</li>
+						<li>Bouncing balls: Simulates some bouncing balls and a black hole</li>
+						<li>Random fractals: Generates Barnsley's fern and Sierpinski's triangle with moving dots</li>
+						<li>Conjecture: A Collatz conjecture analizer and "solver"</li>
+						<li>Markov: A random text generator using Markov chain</li>
+						<li>Neural :): My attempt to make a neural network before knowing how to make one</li>
+						<li>Times table: A times table drawer and animator</li>
+					</ul>
+				</li>
+				<li>
+					<a href="https://github.com/IceMage144/ScrapyCrawlers">Crawlers</a>: Some crawlers I
+					made using Python's Scrapy (database not included), some of them are:
+					<ul>
+						<li>Wiki: Takes two Wikipedia's pages and finds a path between them through other
+						pages, much like <a href="http://thewikigame.com/">Wikigame</a></li>
+						<li>Text: Extracts the text from an Wikipedia page</li>
+						<li>Dic: Take some information from <a href="https://www.wiktionary.org/">Wiktionary</a>'s database</li>
+					</ul>
+				</li>
+				<li>
+					<a href="https://https://uspgamedev.org/">GameDev</a>: I'm part of USPGameDev, a group of
+					game developers from USP, and I'm doing some projects with them:
+					<ul>
+						<li><a href="https://github.com/IceMage144/SpaceInvaders">Space invaders</a>: A reproduction of the famous game Space Invaders</li>
+						<li><a href="https://github.com/uspgamedev/Deviant">Deviant</a>: A thriller adventure game set on a dystopic future</li>
+						<li><a href="https://github.com/uspgamedev/ugdk">UGDK (USP Game Development Kit)</a>: A C++ library for making games</li>
+					</ul>
+				</li>
+	    </ul>
+			<p>&nbsp;</p>
+		</div>
+  </div>
+  <footer id="footer">
+    <table class="footer">
+      <tbody>
+        <tr>
+          <td>
+            <ul class="footer">
+              <li><a href="https://github.com/IceMage144"><img src="assets/github.png"></a></li>
 							<li><a href="https://www.facebook.com/joao.gabriel.564813"><img src="assets/facebook.png"></a></li>
 							<li><a href="mailto:joao.basi@usp.br"><img src="assets/mail.png"></a></li>
-                        </ul>
-                    </td>
-                </tr>
-            </table>
-        </table>
-    </footer>
+            </ul>
+          </td>
+        </tr>
+      </table>
+    </table>
+  </footer>
 </body>
 </html>
