Add events page

--- a/apps.html
+++ b/apps.html
@@ -21,7 +21,7 @@
 					<li><a href="missile_command.html">Missile command</a></li>
 					<li><a href="maze.html">3D Maze</a></li>
 					<li><a href="tower_deffense.html">Monster invasion</a></li>
-			    </ul>
+			  </ul>
 			</li>
 			<li>
 				<a href="projects.html">Projects</a>
@@ -29,7 +29,10 @@
 					<li><a href="https://github.com/IceMage144/Algorithms">Algorithms</a></li>
 					<li><a href="https://github.com/IceMage144/ScrapyCrawlers">Crawlers</a></li>
 					<li><a href="https://uspgamedev.org/">Gamedev</a></li>
-			    </ul>
+			  </ul>
+			</li>
+			<li>
+				<a href="events.html">Events</a>
 			</li>
 			<li>
 				<a href="about.html">About me</a>
