--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@ http://materializecss.com/buttons.html
 			    </ul>
 			</li>
 			<li>
+				<a href="events.html">Events</a>
+			</li>
+			<li>
 				<a href="about.html">About me</a>
 			</li>
 		</ul>
