--- a/projects.html
+++ b/projects.html
@@ -24,12 +24,15 @@
 			  </ul>
 			</li>
 			<li class="active">
-				<a>Projects</a>
+				<a href="projects.html">Projects</a>
 				<ul>
 					<li><a href="https://github.com/IceMage144/Algorithms">Algorithms</a></li>
 					<li><a href="https://github.com/IceMage144/ScrapyCrawlers">Crawlers</a></li>
 					<li><a href="https://uspgamedev.org/">Gamedev</a></li>
 			  </ul>
+			</li>
+			<li>
+				<a href="events.html">Events</a>
 			</li>
 			<li>
 				<a href="about.html">About me</a>
@@ -59,7 +62,7 @@
 				</li>
 				<li>
 					<a href="https://github.com/IceMage144/ScrapyCrawlers">Crawlers</a>: Some crawlers I
-					made using Python's Scrapy (database not included), some of them are:
+					made using Python's Scrapy (scrapped database not included), some of them are:
 					<ul>
 						<li>Wiki: Takes two Wikipedia's pages and finds a path between them through other
 						pages, much like <a href="http://thewikigame.com/">Wikigame</a></li>
