--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8"></meta>
-	<title>APPs</title>
+	<title>About me</title>
 	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
@@ -30,6 +30,9 @@
 					<li><a href="https://github.com/IceMage144/ScrapyCrawlers">Crawlers</a></li>
 					<li><a href="https://uspgamedev.org/">Gamedev</a></li>
 			    </ul>
+			</li>
+			<li>
+				<a href="events.html">Events</a>
 			</li>
 			<li class="active">
 				<a href="about.html">About me</a>
