--- a/derivative.html
+++ b/derivative.html
@@ -36,6 +36,9 @@
 			  </ul>
 			</li>
 			<li>
+				<a href="events.html">Events</a>
+			</li>
+			<li>
 				<a href="about.html">About me</a>
 			</li>
 		</ul>
