--- a/tetris.html
+++ b/tetris.html
@@ -32,6 +32,9 @@
 			  </ul>
 			</li>
 			<li>
+				<a href="events.html">Events</a>
+			</li>
+			<li>
 				<a href="about.html">About me</a>
 			</li>
 		</ul>
