Add entry and description classes at css and improve Events page

--- a/projects.html
+++ b/projects.html
@@ -52,17 +52,17 @@
 					algorithms for diverse purposes, some of them are:
 					<ul>
 						<li>Mandelbrot set generator: Generates an image of the famous Mandelbrot set</li>
-						<li>Bouncing balls: Simulates some bouncing balls and a black hole</li>
+						<li>Bouncing balls: Simulates some bouncing balls and a black hole with lots of physics</li>
 						<li>Random fractals: Generates Barnsley's fern and Sierpinski's triangle with moving dots</li>
 						<li>Conjecture: A Collatz conjecture analizer and "solver"</li>
 						<li>Markov: A random text generator using Markov chain</li>
-						<li>Neural :): My attempt to make a neural network before knowing how to make one</li>
+						<li>Neural :): My attempt to make a neural network before knowing what it is</li>
 						<li>Times table: A times table drawer and animator</li>
 					</ul>
 				</li>
 				<li>
 					<a href="https://github.com/IceMage144/ScrapyCrawlers">Crawlers</a>: Some crawlers I
-					made using Python's Scrapy (scrapped database not included), some of them are:
+					made using Python's Scrapy (scrapped data not included), some of them are:
 					<ul>
 						<li>Wiki: Takes two Wikipedia's pages and finds a path between them through other
 						pages, much like <a href="http://thewikigame.com/">Wikigame</a></li>
@@ -77,6 +77,7 @@
 						<li><a href="https://github.com/IceMage144/SpaceInvaders">Space invaders</a>: A reproduction of the famous game Space Invaders</li>
 						<li><a href="https://github.com/uspgamedev/Deviant">Deviant</a>: A thriller adventure game set on a dystopic future</li>
 						<li><a href="https://github.com/uspgamedev/ugdk">UGDK (USP Game Development Kit)</a>: A C++ library for making games</li>
+						<li>And some other ones you can see at <a href="events.html">Events</a>...
 					</ul>
 				</li>
 	    </ul>
