--- a/tetris.html
+++ b/tetris.html
@@ -49,23 +49,25 @@
 		      <script type="text/javascript" src="tetris_script.js"></script>
 				</div>
 				<p>-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-</p>
-				<h2>How to play</h2>
-				<table>
-					<tbody>
-						<tr>
-							<td>
-								<ul>
-									<li>Left and right keys: Move the piece</li>
-									<li>Down key: Increases piece's falling speed</li>
-									<li>Z: Rotate the piece anticlockwise</li>
-									<li>X: Rotate the piece clockwise</li>
-									<li>P: Pause</li>
-									<li>Fill the rows to increase your score!!</li>
-								</ul>
-							</td>
-						</tr>
-					</tbody>
-				</table>
+				<div class="description">
+					<h2>How to play</h2>
+					<table>
+						<tbody>
+							<tr>
+								<td>
+									<ul>
+										<li>Left and right keys: Move the piece</li>
+										<li>Down key: Increases piece's falling speed</li>
+										<li>Z: Rotate the piece anticlockwise</li>
+										<li>X: Rotate the piece clockwise</li>
+										<li>P: Pause</li>
+										<li>Fill the rows to increase your score!!</li>
+									</ul>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
 				<p>&nbsp;</p>
 			</center>
 		</div>
