--- a/tower_deffense.html
+++ b/tower_deffense.html
@@ -50,21 +50,23 @@
 				</div>
 				<p>&nbsp;</p>
 				<p>-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-</p>
-				<h2>How to play</h2>
-				<table>
-					<tbody>
-						<tr>
-							<td>
-								<ul>
-									<li>Mouse: Everything</li>
-									<li>Buy towers from the shop and build them in a nice place</li>
-									<li>Click on towers to inspect and upgrade</li>
-									<li>Defeat huge waves of monsters with your military weapons!!</li>
-								</ul>
-							</td>
-						</tr>
-					</tbody>
-				</table>
+				<div class="description">
+					<h2>How to play</h2>
+					<table>
+						<tbody>
+							<tr>
+								<td>
+									<ul>
+										<li>Mouse: Everything</li>
+										<li>Buy towers from the shop and build them in a nice place</li>
+										<li>Click on towers to inspect and upgrade</li>
+										<li>Defeat huge waves of monsters with your military weapons!!</li>
+									</ul>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
 				<p>&nbsp;</p>
 			</center>
 		</div>
