--- a/derivative.html
+++ b/derivative.html
@@ -69,41 +69,45 @@
 			  <p id="result" style="font-size:30px">..........</p>
 			  <p id="errorLog" style="font-size:30px"></p>
 				<p>-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-</p>
-				<h2>How to use</h2>
-				<table>
-					<tbody>
-						<tr>
-							<td>
-								<ul>
-									<li>Put the function in the first line</li>
-									<li>Put the variable you want to derivate in at the second line</li>
-									<li>Click on the "Calculate" button and see the derivative!</li>
-								</ul>
-							</td>
-						</tr>
-					</tbody>
-				</table>
+				<div class="description">
+					<h2>How to use</h2>
+					<table>
+						<tbody>
+							<tr>
+								<td>
+									<ul>
+										<li>Put the function in the first line</li>
+										<li>Put the variable you want to derivate in at the second line</li>
+										<li>Click on the "Calculate" button and see the derivative!</li>
+									</ul>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
 				<p>-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-</p>
-				<h2>Valid functions and variables</h2>
-				<table>
-					<tbody>
-						<tr>
-							<td>
-								<ul>
-									<li>Variables can be an upper or lower case letter (excluding "e"), and can have subscript using "_", ex.: x_i</li>
-									<li>To use unary "-", use "~" or it will show an error message</li>
-									<li>You can use the constants e, pi and gr (golden ratio)</li>
-									<li>Power was implemented as a^b and square root was implemeted as sqrt(a)</li>
-									<li>log and ln were implemented too</li>
-									<li>Every trigonometric function were implemented (inverses, inverse functions and hiperbolic)</li>
-									<li>sum(a, b, x_i) = summation of x_i's, with i going from a to b (a and b can be almost anything) (Obs.: don't try to derivate it in x_i!)</li>
-									<li>Factorial is not implemented</li>
-									<li>You may have to do some algebraic manipulations to simplify the result :)</li>
-								</ul>
-							</td>
-						</tr>
-					</tbody>
-				</table>
+				<div class="description">
+					<h2>Valid functions and variables</h2>
+					<table>
+						<tbody>
+							<tr>
+								<td>
+									<ul>
+										<li>Variables can be an upper or lower case letter (excluding "e"), and can have subscript using "_", ex.: x_i</li>
+										<li>To use unary "-", use "~" or it will show an error message</li>
+										<li>You can use the constants e, pi and gr (golden ratio)</li>
+										<li>Power was implemented as a^b and square root was implemeted as sqrt(a)</li>
+										<li>log and ln were implemented too</li>
+										<li>Every trigonometric function were implemented (inverses, inverse functions and hiperbolic)</li>
+										<li>sum(a, b, x_i) = summation of x_i's, with i going from a to b (a and b can be almost anything) (Obs.: don't try to derivate it in x_i!)</li>
+										<li>Factorial is not implemented</li>
+										<li>You may have to do some algebraic manipulations to simplify the result :)</li>
+									</ul>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
 			</center>
 			<p>&nbsp;</p>
 		</div>
