--- a/maze.html
+++ b/maze.html
@@ -53,19 +53,21 @@
 				</div>
 				<p>&nbsp;</p>
 				<p>-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-</p>
-				<h2>How to play</h2>
-				<table>
-					<tbody>
-						<tr>
-							<td>
-								<ul>
-									<li>Arrow keys: Move the maze</li>
-									<li>Bring the ball to the green spot!!</li>
-								</ul>
-							</td>
-						</tr>
-					</tbody>
-				</table>
+				<div class="description">
+					<h2>How to play</h2>
+					<table>
+						<tbody>
+							<tr>
+								<td>
+									<ul>
+										<li>Arrow keys: Move the maze</li>
+										<li>Bring the ball to the green spot!!</li>
+									</ul>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
 				<p>&nbsp;</p>
 			</center>
 		</div>
