--- a/missile_command.html
+++ b/missile_command.html
@@ -50,21 +50,23 @@
 				</div>
 				<p>&nbsp;</p>
 				<p>-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-</p>
-				<h2>How to play</h2>
-				<table>
-					<tbody>
-						<tr>
-							<td>
-								<ul>
-									<li>Arrow keys: Move cursor</li>
-									<li>Z: Shoot</li>
-									<li>P: Pause</li>
-									<li>Destroy enemy's missiles to protect your cities!!</li>
-								</ul>
-							</td>
-						</tr>
-					</tbody>
-				</table>
+				<div class="description">
+					<h2>How to play</h2>
+					<table>
+						<tbody>
+							<tr>
+								<td>
+									<ul>
+										<li>Arrow keys: Move cursor</li>
+										<li>Z: Shoot</li>
+										<li>P: Pause</li>
+										<li>Destroy enemy's missiles to protect your cities!!</li>
+									</ul>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
 				<p>&nbsp;</p>
 			</center>
 	  </div>
